fix: changed the way that problem types are assigned to many to many relationships between pages and problems